--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,6 +109,38 @@ h2 {
     object-fit: cover;
 }
 
+.imgBoxDiv {
+    width: 318px;
+    height: 300px;
+    cursor: pointer;
+    overflow: hidden;
+    box-shadow: 2px 2px 8px 0px #000;
+}
+
+.imgDiv {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: lightblue;
+    z-index: 1;
+    transition: all .5s ease;
+    bottom: 0px;
+    overflow: hidden;
+}
+
+.imgBoxDiv:hover .imgDiv {
+    bottom: 60px;
+}
+
+.imgDescDiv {
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    position: absolute;
+    bottom: 20px;
+    display: flex;
+}
+
 
 .content {
     margin-left: auto;
