--- a/users/templates/users/detail.html
+++ b/users/templates/users/detail.html
@@ -10,12 +10,12 @@
             {% if profile.image %}
             <img src="{{ profile.image.url }}" alt="" style="width: 100px; height: 100px;">
             {% else %}
-            <img src="https://dummyimage.com/1200x960/000000/c4c4c4" class="" style="width: 100px; height: 100px;">
+            <img src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" class="" style="width: 100px; height: 100px;">
             {% endif %}
             <div>
             <br><a href="{% url 'users:profile_update' %}" class='btn btn-outline-success'>프로필 이미지 수정</a>
         </div>
-        <br></div>
+        </div>
         <p class="mb-4">이름 :
             {{ user.full_name }}</p>
         <p class="mb-4">이메일 :
